--- a/_posts/2022-11-09-1967.md
+++ b/_posts/2022-11-09-1967.md
@@ -1,10 +1,12 @@
+```yaml
 title: 트리의지름
 author: Sicoree EE
 date: 2022-11-09 20:22:00 +0900
 categories: [baek]
 tags: [baek, 1967, G4]
+```
 
-[트리의지름 | G4](https://www.acmicpc.net/problem/1967)
+# [트리의지름 G4](https://www.acmicpc.net/problem/1967)
 
 ## 문제
 
