--- a/_posts/2022-11-08-2206.md
+++ b/_posts/2022-11-08-2206.md
@@ -3,7 +3,7 @@ title: 벽 부수고 이동하기
 author: Sicoree EE
 date: 2022-11-08 20:22:00 +0900
 categories: [baek]
-tags: [baek, 2206, G3]
+tags: [baek, G3]
 ---
 
 # [벽 부수고 이동하기 G3](https://www.acmicpc.net/problem/2206)
