--- a/_posts/2022-11-06-7576.md
+++ b/_posts/2022-11-06-7576.md
@@ -3,7 +3,7 @@ title: 토마토
 author: Sicoree EE
 date: 2022-11-06 19:22:00 +0900
 categories: [baek]
-tags: [baek, 7576, G5]
+tags: [baek, G5]
 ---
 
 # [토마토 G5](https://www.acmicpc.net/problem/7576)
