--- a/_posts/2022-11-07-10026.md
+++ b/_posts/2022-11-07-10026.md
@@ -3,7 +3,7 @@ title: 적록색약
 author: Sicoree EE
 date: 2022-11-07 20:22:00 +0900
 categories: [baek]
-tags: [baek, 10026, G5]
+tags: [baek, G5]
 ---
 
 # [적록색약 G5](https://www.acmicpc.net/problem/10026)
