[Python] tag update

--- a/_posts/2022-11-10-1918.md
+++ b/_posts/2022-11-10-1918.md
@@ -1,9 +1,9 @@
 ---
-title: 후위 표기
+title: [Python] Baek 1918 후위 표기식 
 author: Sicoree EE
 date: 2022-11-10 21:27:00 +0900
 categories: [baek]
-tags: [baek, G2]
+tags: [Python, G2]
 ---
 
 # [후위 표기식 G2](https://www.acmicpc.net/problem/1918)
@@ -32,8 +32,6 @@ tags: [baek, G2]
 
 연산의 우선도가 낮은 연산자는 우선도가 그 이상인 연산자들을 result 에 append 해줘야한다.
 
-
-
 문자(피연산자)라면 바로 결과에 append
 
 ( 라면 연산자용 스택에 append
@@ -45,8 +43,6 @@ tags: [baek, G2]
 ) 라면 (를 만나기 전까지 전부 결과에 append
 
 그리고 result를 출력해주면 후위연산표기식이 된다.
-
-
 
 ## 코드
 
