--- a/_posts/2022-11-08-2206.md
+++ b/_posts/2022-11-08-2206.md
@@ -1,5 +1,5 @@
 ---
-title: 벽 부수고 이동하기
+title: [Python] baek 2206 벽 부수고 이동하기
 author: Sicoree EE
 date: 2022-11-08 20:22:00 +0900
 categories: [baek]
