--- a/_posts/2022-11-04-1342.md
+++ b/_posts/2022-11-04-1342.md
@@ -1,9 +1,9 @@
 ---
-title: [Python] 행운의 문자열
+title: 행운의 문자열
 author: Sicoree EE
 date: 2022-11-04 19:22:00 +0900
 categories: [baek]
-tags: [Python, S1]
+tags: [baek, S1]
 ---
 
 # [행운의 문자열 S1](https://www.acmicpc.net/problem/1342)
