--- a/_posts/2022-11-10-1918.md
+++ b/_posts/2022-11-10-1918.md
@@ -1,9 +1,9 @@
 ---
-title: [Python] Baek 1918 후위 표기식 
+title: 후위 표기식 
 author: Sicoree EE
 date: 2022-11-10 21:27:00 +0900
 categories: [baek]
-tags: [Python, G2]
+tags: [baek, G2]
 ---
 
 # [후위 표기식 G2](https://www.acmicpc.net/problem/1918)
