--- a/_posts/2022-11-03-13460.md
+++ b/_posts/2022-11-03-13460.md
@@ -2,7 +2,7 @@
 title: 구슬 탈출 2
 author: Sicoree EE
 date: 2022-11-03 20:28:00 +0900
-categories: [baek]
+categories: [baek, G1]
 tags: [baek, G1]
 ---
 
