--- a/_posts/2022-11-04-1342.md
+++ b/_posts/2022-11-04-1342.md
@@ -2,7 +2,7 @@
 title: 행운의 문자열
 author: Sicoree EE
 date: 2022-11-04 19:22:00 +0900
-categories: [baek]
+categories: [baek, S1]
 tags: [baek, S1]
 ---
 
