--- a/_posts/2022-11-07-10026.md
+++ b/_posts/2022-11-07-10026.md
@@ -2,7 +2,7 @@
 title: 적록색약
 author: Sicoree EE
 date: 2022-11-07 20:22:00 +0900
-categories: [baek]
+categories: [baek, G5]
 tags: [baek, G5]
 ---
 
