--- a/_posts/2022-11-09-1967.md
+++ b/_posts/2022-11-09-1967.md
@@ -2,7 +2,7 @@
 title: 트리의지름
 author: Sicoree EE
 date: 2022-11-09 20:22:00 +0900
-categories: [baek]
+categories: [baek, G4]
 tags: [baek, G4]
 ---
 
