--- a/_posts/2022-11-10-1918.md
+++ b/_posts/2022-11-10-1918.md
@@ -2,7 +2,7 @@
 title: 후위 표기식 
 author: Sicoree EE
 date: 2022-11-10 21:27:00 +0900
-categories: [baek]
+categories: [baek, G2]
 tags: [baek, G2]
 ---
 
