--- a/_posts/2022-11-23-2042.md
+++ b/_posts/2022-11-23-2042.md
@@ -2,7 +2,7 @@
 title: 구간 합 구하기
 author: Sicoree EE
 date: 2022-11-23 10:40:00 +0900
-categories: [baek]
+categories: [baek, G1]
 tags: [baek, G1]
 
 ---
@@ -53,7 +53,7 @@ def init(node, left, right):
     if left == right:
         arr[node] = tmp[left]
         return arr[node]
-    
+
     # 리프노드가 아니라면, 왼쪽과 오른쪽으로 나눠 그 합을 리턴
     else:
         mid = (left + right) // 2
@@ -70,7 +70,7 @@ def subSum(node, f, t, left, right):
     # 가지치기
     if right < f or t < left:
         return 0
-    
+
     # 포함된다면 리프로 들어갈 필요가 없으므로 바로리턴 
     if left <= f and t <= right:
         return arr[node]
@@ -86,7 +86,7 @@ def update(node, f, t, index, diff):
 
     if index < f or t < index:
         return
-    
+
     arr[node] += diff
 
     if f != t:    
@@ -95,7 +95,7 @@ def update(node, f, t, index, diff):
         update(node * 2 + 1, mid + 1, t, index, diff)
 
 N, M, K = map(int, input().rstrip().split())
-    
+
 tmp = []
 arr = [0] * 4 * N
 
