--- a/_posts/2022-11-23-6549.md
+++ b/_posts/2022-11-23-6549.md
@@ -1,9 +1,8 @@
 ---
-
 title: 히스토그램에서 가장 큰 직사각형
 author: Sicoree EE
 date: 2022-11-23 17:10:00 +0900
-categories: [baek]
+categories: [baek, P5]
 tags: [baek, P5]
 
 ---
@@ -26,8 +25,6 @@ tags: [baek, P5]
 
 각 테스트 케이스에 대해서, 히스토그램에서 가장 넓이가 큰 직사각형의 넓이를 출력한다.
 
-
-
 ## 접근방법
 
 처음에 단순 코딩으로 풀었다가 시간초과가 나서 세그먼트 트리를 공부하였다
@@ -36,11 +33,7 @@ tags: [baek, P5]
 
 해당문제를 세그먼트 트리를 공부하여 해결하였고, 요번문제에 적용시켰다
 
-
-
 처음에는 어떻게 적용시켜야 하는지 생각이 안나서 구글의 도움을받아 최소 높이의 인덱스를 구하는것을 세그먼트 트리를 활용하게 되었다.
-
-
 
 최소높이와 인덱스를 저장해둘 세그먼트 트리를 구현한 후,
 
@@ -48,11 +41,7 @@ tags: [baek, P5]
 
 최소높이만 있으면 넓이는 구해지기때문에 이후는 해결하기 쉬웠다
 
-
-
 아직 자세하게 설명이 안되므로 조금더 공부한 후 다듬도록 하겠다 ..
-
-
 
 ## 코드 1 (시간초과)
 
@@ -67,7 +56,7 @@ tags: [baek, P5]
 
 #     hq = deque(set(arr))
 #     result = 0
-    
+
 #     while hq:
 #         h = hq.popleft()
 
@@ -90,8 +79,6 @@ tags: [baek, P5]
 #     print(result)
 ```
 
-
-
 ## 코드 2 (성공)
 
 ```python
@@ -113,7 +100,7 @@ def init(node, left, right):
     if left == right:
         arr[node] = [tmp[left], left]
         return arr[node]
-    
+
     mid = (left + right) // 2
     left_node = init(node * 2, left, mid)
     right_node = init(node * 2 + 1, mid + 1, right)
@@ -129,7 +116,7 @@ def sol(node, f, t, left, right):
 
     if left <= f and t <= right:
         return arr[node]
-    
+
     mid = (f + t) // 2
     left_node = sol(node * 2, f, mid, left, right)
     right_node = sol(node * 2 + 1, mid + 1, t, left, right)
@@ -142,7 +129,7 @@ def divide(f, t):
         return tmp[f]
     if f > t:
         return -1
-    
+
     min, idx = sol(1, 0, N - 1, f, t)
     a = divide(f, idx - 1)
     b = divide(idx + 1, t)
@@ -163,12 +150,8 @@ while True:
     print(divide(0, N - 1))
 ```
 
-
-
 ## 코드 3 (스택)
 
 ```python
 
 ```
-
-
