--- a/_posts/2022-11-25-1240.md
+++ b/_posts/2022-11-25-1240.md
@@ -1,14 +1,11 @@
 ---
-
 title: 노드사이의 거리
 author: Sicoree EE
 date: 2022-11-25 15:31:00 +0900
-categories: [baek]
+categories: [baek, G5]
 tags: [baek, G5]
 
 ---
-
-
 
 # [노드사이의 거리](https://www.acmicpc.net/problem/1240)
 
@@ -50,7 +47,7 @@ def BFS(a, b):
     q.append(a)
     v = [0] * (N + 1)
     v[a] = 1
-    
+
     while q:
         cx = q.popleft()
 
@@ -76,5 +73,3 @@ node = [list(map(int, input().rstrip().split())) for _ in range(M)]
 for f, t in node:
     print(BFS(f, t) - 1)
 ```
-
-
