--- a/_posts/2022-11-25-13549.md
+++ b/_posts/2022-11-25-13549.md
@@ -2,7 +2,7 @@
 title: 숨바꼭질 3
 author: Sicoree EE
 date: 2022-11-25 16:24:00 +0900
-categories: [baek]
+categories: [baek, G5]
 tags: [baek, G5]
 
 ---
