--- a/_posts/2022-11-28-1854.md
+++ b/_posts/2022-11-28-1854.md
@@ -1,16 +1,13 @@
 ---
-
 title: K번째 최단경로 찾기
 author: Sicoree EE
 date: 2022-11-28 16:24:00 +0900
-categories: [baek]
+categories: [baek, P4]
 tags: [baek, P4]
 
 ---
 
 # [K번째 최단경로 찾기](https://www.acmicpc.net/problem/1854)
-
-
 
 ## 접근방법
 
@@ -23,8 +20,6 @@ heapq(우선순위 큐)에 대하여 알아보자면,
 파이썬 에서는 `heappush` 를 사용하여 큐에 push 할 수 있고,
 
 `heappop` 을 사용하여 루트노드를 pop 할 수 있다.
-
-
 
 다음과 같이 리스트로 넣는다면 첫번째 인덱스가 비교된다.
 
@@ -50,8 +45,6 @@ print(q)
 [[2, 55], [3, 1]]
 ```
 
-
-
 하지만 우리는 최소 거리부터 K 번째를 구해야 하기 때문에,  다음과 같이 첫번째 인덱스(총 거리) 를 음수로 넣어줄 것이다.
 
 ```python
@@ -70,8 +63,6 @@ print(qq)
 [[-3, 1], [-1, 99], [-2, 55]]
 ```
 
-
-
 위의 방식대로 Dijkstra 알고리즘에 적용하여 코드를 풀어나가보자면,
 
 해당 노드까지 가는 거리의 갯수가 k개보다 작다면
@@ -83,8 +74,6 @@ k개 이상이라면
 루트노드(가장 먼 거리) 를 팝 해준후에 삽입을 해주면 총 경로 개수가 k개로 유지가 된다
 
 이후 결과출력때 거리가 k개 라면 바로 프린트 해주고, k개가 되지 않는다면 -1을 프린트 해주면 된다.
-
-
 
 ## 코드
 
@@ -123,15 +112,6 @@ for idx in range(1, n + 1):
         print(-1)
     else:
         print(-result[idx][0])
-
 ```
 
-
-
 # 
-
-
-
-
-
-
