--- a/_posts/2022-11-06-7576.md
+++ b/_posts/2022-11-06-7576.md
@@ -2,7 +2,7 @@
 title: 토마토
 author: Sicoree EE
 date: 2022-11-06 19:22:00 +0900
-categories: [baek]
+categories: [baek, G5]
 tags: [baek, G5]
 ---
 
